# ai-code-reviewer

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  prompts.py  schemas.py
backend/app/routers/: analyze.py  projects.py  review.py
backend/app/services/: github_service.py  mcp_index.py  mcp_semantic.py  ollama_client.py  project_store.py  reviewer.py
cli/: pyproject.toml
cli/reviewer_cli/: main.py
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlreadyAnalyzedBanner.tsx  AnalyzeCard.tsx  Badges.tsx  FileReviewCard.tsx  Header.tsx  Logo.tsx  ResultsPanel.tsx  SegmentedControl.tsx  Spinner.tsx
frontend/components/panels/: DiffPanel.tsx  HistoryPanel.tsx  ReReviewPanel.tsx
samples/: clean_sample.py  logic_bug.py  security_issue.py
scripts/: generate_samples_output.py
