[project]
name = "ai-code-reviewer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.6",
    "black>=24.8",
    "streamlit>=1.60.0",
    "httpx"
]

[tool.uv.workspace]
members = ["backend", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "**/.venv", "samples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]
